<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Sherlock.Dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView_bookmark_dialog_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bookmark_dialog_title"
            android:src="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/textView_bookmark_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/imageView_bookmark_dialog_icon"
            android:text="@string/bookmark_dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <View
		style="@style/Theme.EOT.Divider" />

    <TextView
        android:id="@+id/textView_bookmark_dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_dialog_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_bookmark_dialog_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="3"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/bookmark_dialog_comment_title" >
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_bookmark_dialog_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_bookmark_dialog_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
